--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@azure/msal-react": "^2.0.6",
     "@azure/msal-browser": "^3.1.0",
+    "@azure/msal-react": "^2.0.6",
     "@fluentui/react": "^8.112.5",
     "@fluentui/react-components": "^9.37.3",
     "@fluentui/react-icons": "^2.0.221",
+    "@microsoft/ai-chat-protocol": "1.0.0-beta.20240610.1",
     "@react-spring/web": "^9.7.3",
-    "marked": "^9.1.6",
     "dompurify": "^3.1.3",
+    "marked": "^9.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
-    "@microsoft/ai-chat-protocol": "1.0.0-beta.20240610.1",
     "react-syntax-highlighter": "^15.5.0",
     "scheduler": "^0.20.2"
   },
@@ -31,10 +31,11 @@
     "@types/dompurify": "^3.0.4",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@vitejs/plugin-react": "^4.1.1",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
-    "@types/react-syntax-highlighter": "^15.5.7",
-    "vite": "^4.5.5"
+    "vite": "^4.5.5",
+    "yarn": "^1.22.22"
   }
 }
